--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 body{
+  max-width: 100%;
   margin: 0;
   font-family: Arial, Helvetica, sans-serif;
    background-color: rgb(244, 244, 244);
@@ -176,7 +177,7 @@ header{
 }
 
 .footer{
-  position: absolute;
+  position: sticky;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -188,4 +189,8 @@ header{
  font-weight: bold;
  color: white;
  font-size: 40px;
+}
+
+#myChart{
+  width: 1000px;
 }
