--- a/style.css
+++ b/style.css
@@ -177,7 +177,7 @@ header{
 }
 
 .footer{
-  position: sticky;
+  position: fixed;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -193,4 +193,83 @@ header{
 
 #myChart{
   width: 1000px;
+}
+
+.main-login{
+  background-color: white;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: auto;
+  width: 20%;
+  border-radius: 15px;
+  box-shadow: 0px 0px 20px 1px rgba(0, 0, 0, 0.2);
+  padding-top: 60px;
+}
+
+.new-user-link{
+  text-decoration: none;
+}
+
+.new-user{
+  text-align: center;
+  color: #000000;
+  font-weight: bold;
+}
+
+.new-user:hover{
+  text-decoration: underline;
+}
+
+.new-user:active{
+  font-size: large;
+}
+
+.main-part{
+  margin-top: 100px;
+}
+
+.user-details{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 10px;
+}
+
+.login-icons{
+  width: 25px;
+  height: 25px;
+}
+
+.form{
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  justify-content: flex-start;
+}
+
+.login-button{
+  background-color: #cce648;
+  width: 214px;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  font-size: 15px;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+.forgot-password{
+  margin-top: 50px;
+  margin-bottom: 40px;
+  text-decoration: none;
+  color: #00000083;
+}
+
+.forgot-password:hover{
+  text-decoration: underline;
+}
+
+.forgot-password:active{
+  font-size: large;
 }
